# graph_project

./: CMakeLists.txt  README.md  conanfile.py  run_clang_format.sh
results/: multithreading_connected_graph_with_random_edges.json
sandbox/: connected_graph_with_random_edges_simulation_main.cpp  iteration_simple_graph.cpp  multithreading_connected_graph_with_random_edges_simulation_main.cpp  sandbox_main.cpp  study_simple_graphs.cpp
src/: depended_iteration_graph.cpp  depended_iteration_graph.h  fun.cpp  fun.h  function.cpp  function.h  graph.cpp  graph.h  main.cpp  simple_graph.cpp  simple_graph.h  utils.cpp  utils.h
tests/: CMakeLists.txt  graph_tests.cpp  simple_graph_tests.cpp  test_f.cpp  test_main.cpp  utils_tests.cpp
